fix: add visibility to modal animations

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -188,17 +188,21 @@
 @keyframes modal-fade-in {
   0% {
     opacity: 0;
+    visibility: hidden;
   }
   100% {
     opacity: 1;
+    visibility: visible;
   }
 }
 
 @keyframes modal-fade-out {
   0% {
     opacity: 1;
+    visibility: visible;
   }
   100% {
     opacity: 0;
+    visibility: hidden;
   }
 }
